--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/common": "^9.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "reflect-metadata": "^0.1.13"
+    "iterate": "^0.1.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.7"
   }
 }
